# textgen

./: .gitignore  CMakeLists.txt  README.md
include/: generator.h  utils.h
src/: generator.cpp  main.cpp
